# testrail-reporting

./: .editorconfig  .eslintrc  .gitignore  .gitreview  .pylintrc  MANIFEST.in  Makefile  README.md  README.rst  manage.py  package.json  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt  tox.ini  webpack.config.js  wsgi.py
deploy/: testrail_reporting.ini.example  testrail_reporting.nginx.conf.example  testrail_reporting.service.example  testrail_reporting.supervisor.conf.example  testrail_reporting.uwsgi.ini.example  uwsgi.ini.example
etc/testrail_reporting/: testrail_reporting.conf.example
testrail_reporting/: __init__.py  __main__.py  app.py  config.py  extensions.py  forms.py  manager.py  models.py  utils.py  views.py
testrail_reporting/auth/: decorators.py  models.py  oauth.py  views.py
testrail_reporting/cmd/: sync.py
testrail_reporting/pages/: views.py
testrail_reporting/resources/: __init__.py  decorators.py  reports.py
testrail_reporting/static/js/: app.js  app.jsx
testrail_reporting/static/js/components/: TestRail.js  TestRail.jsx
testrail_reporting/static/less/: app.less
testrail_reporting/templates/: 401.html  404.html  500.html  base.html  index.html  login.html
testrail_reporting/templates/errors/: 401.html  404.html  500.html
testrail_reporting/templates/security/: login_user.html
testrail_reporting/testrail/: models.py  reports.py  testrail_client.py  views.py
testrail_reporting/views/: api.py  pages.py
tests/: test_basics.py
