[metadata]
name = testrail-reporting
summary = Web App that lets you build custom reports for TestRail
description-file = README.rst
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    testrail_reporting
