[metadata]
name = testrail-reporting
summary = Web App that lets you build custom reports for TestRail
description-file = README.rst
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    testrail_reporting

data_files =
    etc/testrail_reporting = etc/testrail_reporting/*
